# baby-nutrition-ai

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: food_rules.yaml
docs/: DEPLOYMENT.md  FEATURES_AND_SECURITY.md  WHATSAPP_SETUP.md
src/baby_nutrition_ai/: __init__.py  __main__.py  config.py  main.py
src/baby_nutrition_ai/llm/: __init__.py  base.py  openai_client.py
src/baby_nutrition_ai/media/: __init__.py  image_generator.py  pdf_generator.py
src/baby_nutrition_ai/models/: __init__.py  baby_profile.py  meal_plan.py  story.py
src/baby_nutrition_ai/persistence/: __init__.py  conversation_store.py  factory.py  profile_store.py  redis_store.py
src/baby_nutrition_ai/rules/: __init__.py  engine.py
src/baby_nutrition_ai/services/: __init__.py  ai_service.py  conversational_handler.py  meal_plan_service.py  profile_service.py  profile_update_flow.py  story_service.py
src/baby_nutrition_ai/whatsapp/: __init__.py  sender.py  webhook.py
